stag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reshet-stag
  labels:
    app: reshet-stag
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: reshet-stag
