stag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reshet-stag-ingress
  namespace: stag
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: reshetstag.guyhaguy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reshet-stag
            port:
              number: 8082
